#8 till now added functionality: recent ads, delete ads, view single ad, create ad and search ad is pending
