# api/models/advertisesModel.js
@@ -114,12 +114,14 @@ exports.recentAds = (limit, offset) => {
   .field('users.user_phone')
   .field('users.user_id')
   .field('users.user_email')
+  .field('advertises.advertise_sold')
   .join('users', null, 'advertises.advertise_user_id = users.user_id')
   .join('cities', null, 'advertises.advertise_city_id = cities.city_id')
   .join('states', null, 'cities.city_state_id = states.state_id')
   .join('categories', null, 'categories.category_id = advertises.advertise_category_id')
   .join('images', null, 'images.image_advertise_id = advertises.advertise_id')
   .where('advertise_stage = ?', 'published')
+  .where('advertise_sold = ?', false)
   .group('advertises.advertise_id')
   .group('cities.city_id')
   .group('states.state_id')
@@ -141,6 +143,7 @@ exports.countRecords = () => {
   .from('advertises')
   .field('count(advertise_id)', 'count')
   .where('advertise_stage = ?', 'published')
+  .where('advertise_sold = ?', false)
   .toParam();
 
   return database.executeQuery(countQueryRecentAds);
@@ -170,6 +173,7 @@ exports.singleAd = (advertiseID) => {
   .field('users.user_phone')
   .field('users.user_id')
   .field('users.user_email')
+  .field('advertises.advertise_sold')
   .join('users', null, 'advertises.advertise_user_id = users.user_id')
   .join('cities', null, 'advertises.advertise_city_id = cities.city_id')
   .join('states', null, 'cities.city_state_id = states.state_id')
@@ -211,6 +215,7 @@ exports.searchResult = (limit, offset, searchKeyword, minPrice, maxPrice) => {
   .field('users.user_phone')
   .field('users.user_id')
   .field('users.user_email')
+  .field('advertises.advertise_sold')
   .join('users', null, 'advertises.advertise_user_id = users.user_id')
   .join('cities', null, 'advertises.advertise_city_id = cities.city_id')
   .join('states', null, 'cities.city_state_id = states.state_id')
@@ -222,6 +227,7 @@ exports.searchResult = (limit, offset, searchKeyword, minPrice, maxPrice) => {
   .where('advertise_price >= ?', minPrice)
   .where('advertise_price <= ?', maxPrice)
   .where('advertise_stage = ?', 'published')
+  .where('advertise_sold = ?', false)
   .group('advertises.advertise_id')
   .group('cities.city_id')
   .group('states.state_id')
