# routes/index.js
@@ -22,13 +22,13 @@ const validateLink = require('../api/middlewares/validateLink');
 
 /* Adverties Controller Functions */
 router.get('/ads', advertiseController.getRecentAdvertise);
-
 router.post('/ads', isAuthTrue.isAuth, advertiseController.createAdvertise); //stage1
 router.post('/ads/:id/upload', isAuthTrue.isAuth, advertiseController.uploadAdvertiseImages); //stage2
 router.put('/ads/:id/publish', isAuthTrue.isAuth, advertiseController.publishAdvertise); //published
 router.get('/ads/:id', advertiseController.getSingleAdvertise);
-router.put('/ads/:id', advertiseController.modifySingleAdvertise);
+//router.put('/ads/:id', advertiseController.modifySingleAdvertise);
 router.delete('/ads/:id', isAuthTrue.isAuth, advertiseController.deleteSingleAdvertise);
+//router.put('/ads/:id/sold', isAuthTrue.isAuth, advertiseController.markAsSold);
 router.get('/ads/results/:term', advertiseController.searchAll);
 router.get('/ads/:categorName/:term', advertiseController.searchInCategory);
 
